MS-32 Added missing endpoints and fixed a few issues
